discussion/kv_engine/157093/157093_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge remote-tracking branch 'couchbase/mad-hatter'

* couchbase/mad-hatter:
  MB-47231: Delay setting bucket state to Ready

Change-Id: I37899e6aff800da60d99774e38fd9ddaa98151f0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-07 09:17:12.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-07 09:30:28.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/88/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/daemon/memcached.cc:922:42: error: member reference type "EngineIface" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
        bucket.max_document_size = engine->getMaxItemSize();
                                         ^~
                                         .
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/daemon/memcached.cc:923:42: error: member reference type "EngineIface" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
        bucket.supportedFeatures = engine->getFeatures();
                                         ^~
                                         .

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/88/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/daemon/memcached.cc:922:42:
error: member reference type "EngineIface" is not a pointer; did you mean to use "."? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/88/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/97/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/daemon/memcached.cc:922:42:
error: member reference type "EngineIface" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/97/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/94/ : FAILURE

Compile error at [2021-07-07T09:23:25.935Z] ../kv_engine/daemon/memcached.cc:922:42:
error: base operand of ?->? has non-pointer type ?EngineIface?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/94/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/93/ : FAILURE

Compile error at [2021-07-07T09:24:18.460Z] ../kv_engine/daemon/memcached.cc:922:42:
error: member reference type "EngineIface" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/93/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/148/ : FAILURE

Compile error at ..\kv_engine\daemon\memcached.cc(922): error C2819: type "EngineIface" does not have an overloaded member "operator ->" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/148/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/96/ : FAILURE

Compile error at [2021-07-07T09:25:43.070Z] ../kv_engine/daemon/memcached.cc:922:42:
error: member reference type "EngineIface" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/96/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/93/ : FAILURE

Compile error at [2021-07-07T09:25:32.265Z] ../kv_engine/daemon/memcached.cc:922:42:
error: base operand of ?->? has non-pointer type ?EngineIface?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/93/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/2/ : FAILURE

Compile error at [2021-07-07T09:23:55.840Z] ../kv_engine/daemon/memcached.cc:922:42:
error: base operand of ?->? has non-pointer type ?EngineIface?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/2/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/94/ : FAILURE

Compile error at [2021-07-07T09:19:49.419Z] ../kv_engine/daemon/memcached.cc:922:42:
error: member reference type "EngineIface" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/94/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9032/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
